// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading ACT theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="css-dy6d14"
    data-chromatic="ignore"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-n0zba5-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-10k0enq-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-overline css-1njyh6i-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Loading ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="css-dy6d14"
    data-chromatic="ignore"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-n0zba5-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-10k0enq-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-overline css-ghzkcj-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Loading ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="css-dy6d14"
    data-chromatic="ignore"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-i7qam8-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-10k0enq-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-overline css-148a12g-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Loading ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="css-dy6d14"
    data-chromatic="ignore"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1v5he1z-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-10k0enq-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-overline css-148a12g-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Loading ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="css-dy6d14"
    data-chromatic="ignore"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-lp2us5-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-10k0enq-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-overline css-9dmbqp-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;
